--- a/Style/index.css
+++ b/Style/index.css
@@ -18,6 +18,7 @@ canvas {
 .contact {
     color: #5b6677;
     text-align: center;
+    font-weight: bold;
     width: 50%;
     margin:auto;
     margin-top: 10em;
